# em_skeleton_feature_extraction

./: .gitignore  convert_swc.py  dend_test.swc  proofread_manifest.csv  pyproject.toml  requirements.txt  run_cells.py  run_cells_count.py  scaled_plots_v1dd.py  setup.py  spine_features_v1300.ipynb  spine_features_v1412_v1dd.ipynb  swc_export.ipynb  syn_compartments.ipynb  synapse_alignment.ipynb  test.swc  test_feature_extraction-minnie.ipynb  test_feature_extraction-v1dd.ipynb  test_feature_extraction.ipynb
data/: single_soma_sids_v1dd.csv
src/skel_features/: assembly.py  extraction.py  io_utils.py  plot_skeleton_example.py  skel_filtering.py
