[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"


[project]
name = "skel-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "caveclient>=7.6.0",
    "cloud-files>=4.30.1",
    "cloudpathlib>=0.20.0",
    "joblib>=1.4.2",
    "meshparty>=1.18.0",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "pathos>=0.3.3",
    "standard-transform>=1.4.0",
    "l2label",
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "nglui>=3.8.2",
    "ipywidgets>=8.1.5",
    "pcg-skel>=1.3.0",
    "pot>=0.9.5",
]

[tool.uv.sources]
l2label = {git = "https://github.com/ceesem/l2label"}

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
]

